--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -20,3 +20,28 @@
 .hero-img {
   margin-left: 2rem;
 }
+
+@media (max-width: 1200px) {
+  .hero {
+    flex-direction: column;
+  }
+
+  .hero-text {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    order: 2;
+  }
+
+  .hero-img {
+    order: 1;
+    width: 55%;
+    margin: 0 auto;
+  }
+
+  .hero-img img {
+    width: 100%;
+    height: auto;
+    margin-top: 1rem;
+  }
+}
