cards are responsive

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,7 +3,11 @@
 }
 
 @media (max-width: 1200px) {
-  .page-section {
+  .page-section .section-heading {
+    text-align: center;
+  }
+
+  .cards {
     text-align: center;
   }
 }
